--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,32 +1,24 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.10)
+# changes means you need to rerun cmake to update
+
+file(GLOB_RECURSE utils-srcs  "*.cpp" "*.h" "*.qrc")
+PrintList("${utils-srcs}" "")
+
+#qt5
+# Find includes in corresponding build directories
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+set(CMAKE_AUTOUIC ON)
+find_package(Qt5 5.9 REQUIRED Core Gui Widgets PrintSupport Svg Xml OpenGL)
 
 
-
-message( STATUS )
-message( STATUS "=============================================================================" )
-message( STATUS "== JKQTPlotterLib Build Information                                        ==" )
-message( STATUS "=============================================================================" )
-message( STATUS "Version:           ${PROJECT_VERSION}")
-if (CMAKE_BUILD_TYPE)
-    message( STATUS "Build type:       ${CMAKE_BUILD_TYPE}")
-endif(CMAKE_BUILD_TYPE)
-message( STATUS "Using compiler:    ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}" )
-message( STATUS "Using Qt:          ${Qt5_VERSION}" )
-message( STATUS "                     [at ${Qt5_DIR}]" )
-if(BUILD_INCLUDE_XITS_FONTS)
-    message( STATUS "Using XITS fonts" )
-endif(BUILD_INCLUDE_XITS_FONTS)
-message( STATUS "Installing to:     ${CMAKE_INSTALL_PREFIX}" )
-message( STATUS "=============================================================================" )
-message( STATUS )
-
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/jkqtplotter_version.h.in
-               ${CMAKE_CURRENT_BINARY_DIR}/jkqtplotter_version.h)
+add_library(jkqtplotter ${utils-srcs} ${utils-headers})
+target_compile_features(jkqtplotter PUBLIC cxx_std_11)
+target_configure_warnings(jkqtplotter)
+# We need this directory, and users of our library will need it too
+target_include_directories(jkqtplotter PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(jkqtplotter PUBLIC ${Qt5Widgets_INCLUDE_DIRS}) # automatic with the Qt5::Core etc
+target_link_libraries(jkqtplotter PUBLIC Qt5::Core Qt5::Gui Qt5::Widgets Qt5::PrintSupport Qt5::Svg Qt5::Xml Qt5::OpenGL)
 
 
-include_directories(.)
-
-add_subdirectory(jkqtcommon)
-add_subdirectory(jkqtmathtext)
-add_subdirectory(jkqtfastplotter)
-add_subdirectory(jkqtplotter)
