--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,17 +6,6 @@ include("extern/cmake/common.cmake")
 
 init_build()
 
-add_subdirectory(lib)
-option(BUILD_EXAMPLES "Build examples" ON)
-if(BUILD_EXAMPLES)
-    add_subdirectory(examples)
-endif()
-
-# nothing else is really an option, the default is always right ...
-# shared vs static libs shouldnt be manually set in a million places...
-# opencv should be checked for, but does not compile anyways...
-
-
 option(BUILD_INCLUDE_XITS_FONTS "Include XITS fonts as resources in library" ON)
 
 if(BUILD_INCLUDE_XITS_FONTS)
@@ -25,3 +14,15 @@ if(BUILD_INCLUDE_XITS_FONTS)
     else()
         add_definitions(-DNO_XITS_FONTS )
 endif()
+
+add_subdirectory(lib)
+
+
+
+option(BUILD_JKQT_EXAMPLES "Build JKQT examples" OFF)
+if(BUILD_JKQT_EXAMPLES)
+    add_subdirectory(examples)
+endif()
+
+
+
