--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,8 @@ init_build()
 add_subdirectory(lib)
 get_directory_property(hasParent PARENT_DIRECTORY)
 if(NOT hasParent)
-option(BUILD_EXAMPLES "Build examples" OFF)
-if(BUILD_EXAMPLES)
+option(BUILD_JKQT_EXAMPLES "Build examples" OFF)
+if(BUILD_JKQT_EXAMPLES)
     add_subdirectory(examples)
 endif()
 endif()
