added multithreaded qtgui

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.16)
 # changes means you need to rerun cmake to update
 
 file(GLOB_RECURSE utils-srcs  "*.cpp" "*.h" "*.qrc")
@@ -19,8 +19,8 @@ target_compile_features(jkqtplotter PUBLIC cxx_std_17)
 #target_configure_warnings(jkqtplotter)
 # We need this directory, and users of our library will need it too
 target_include_directories(jkqtplotter SYSTEM PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_include_directories(jkqtplotter SYSTEM PUBLIC ${Qt5Widgets_INCLUDE_DIRS}) # automatic with the Qt5::Core etc
-target_link_libraries(jkqtplotter PUBLIC Qt5::Core Qt5::Gui Qt5::Widgets Qt5::PrintSupport Qt5::Svg Qt5::Xml Qt5::OpenGL)
+target_include_directories(jkqtplotter SYSTEM PRIVATE ${Qt5Widgets_INCLUDE_DIRS}) # automatic with the Qt5::Core etc
+target_link_libraries(jkqtplotter PRIVATE Qt5::Core Qt5::Gui Qt5::Widgets Qt5::PrintSupport Qt5::Svg Qt5::Xml Qt5::OpenGL)
 
 target_compile_definitions(jkqtplotter INTERFACE -DAUTOLOAD_XITS_FONTS)
 target_compile_definitions(jkqtplotter INTERFACE -DUSE_XITS_FONTS )
